<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:padding="16dp"
    tools:context="view.JoinActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        android:src="@drawable/user"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        android:layout_marginStart="-36dp"
        android:layout_marginTop="-36dp"
        android:src="@drawable/add_circle"
        />

    <!-- EditText for Username -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/etAboutMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- EditText for About Me -->
    <EditText
        android:id="@+id/etAboutMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/about_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- EditText for Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAboutMe"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- EditText for Password -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/items"
        android:text="@string/edit"
        android:textColor="@color/textButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <!-- Button to navigate to Login Screen -->

</androidx.constraintlayout.widget.ConstraintLayout>
