...



    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:backgroundTint="@color/items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llFollowersFollowing"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:backgroundTint="@color/logoutRed"
        app:layout_constraintEnd_toEndOf="parent"
...
