...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etUsername"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="132dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:fontFamily="@font/montserrat"
...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.937"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:fontFamily="@font/montserrat"
...
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etUsername" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="@color/items"
...
